Fork loved themes and added as submodules, in order to submit myself modifications.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "themes/TRNexT"]
 	path = themes/TRNexT
-	url = https://github.com/uruir/TRNexT.git
+	url = git@github.com:changyukang/TRNexT.git
+[submodule "themes/hexo-theme-next"]
+	path = themes/hexo-theme-next
+	url = git@github.com:changyukang/hexo-theme-next.git
 [submodule "themes/hexo-theme-noderce"]
 	path = themes/hexo-theme-noderce
-	url = https://github.com/willerce/hexo-theme-noderce.git
+	url = git@github.com:changyukang/hexo-theme-noderce.git
