--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hexo-renderer-less": "^0.2.0",
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.3"
+    "hexo-server": "^0.3.3",
+    "hoek": "^5.0.4"
   }
 }
