--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "version": "3.7.1"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "ejs": "^2.6.1",
     "hexo": "^3.7.1",
+    "hexo-admin": "^2.3.0",
     "hexo-asset-image": "0.0.3",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.5",
