change the avater and add an article about Heap

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # Avatar 
 #avatar: uploads/avatar.jpg
-avatar: http://7xoae4.com1.z0.glb.clouddn.com/Level8.png    
+avatar: http://changyukang.github.io/2015/09/15/英语/英语Level/Level11.png
 # Google Baidu
 #google_analytics: your-analytics-id
 #baidu_analytics: your-analytics-id   
