--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "themes/hexo-theme-noderce"]
 	path = themes/hexo-theme-noderce
 	url = https://github.com/changyukang/hexo-theme-noderce.git
+[submodule "themes/hexo-theme-next_offical"]
+	path = themes/hexo-theme-next_offical
+	url = https://github.com/theme-next/hexo-theme-next
