--- a/_config.hexo-theme-next_offical.yml
+++ b/_config.hexo-theme-next_offical.yml
@@ -65,8 +65,8 @@ custom_logo: #/uploads/custom-logo.jpg
 # You can set a language value if you prefer a translated version of CC license, e.g. deed.zh
 # CC licenses are available in 39 languages, you can find the specific and correct abbreviation you need on https://creativecommons.org
 creative_commons:
-  license: by-nc-sa
-  sidebar: false
+  license: by-nc-nd
+  sidebar: true
   post: false
   language:
 
@@ -211,7 +211,8 @@ footer:
     color: "#ff0000"
 
   # If not defined, `author` from Hexo `_config.yml` will be used.
-  copyright: CC BY-NC-ND 4.0
+  #copyright: BY-NC-ND 4.0
+  copyright:
 
   # Powered by Hexo & NexT
   powered: true
@@ -308,12 +309,6 @@ post_edit:
 # Show previous post and next post in post footer if exists
 # Available values: left | right | false
 post_navigation: left
-
-# # Declare license on posts
-# post_copyright:
-#   enable: true
-#   license: CC BY-NC-ND 4.0
-#   license_url: https://creativecommons.org/licenses/by-nc-nd/4.0/legalcode
 
 # ---------------------------------------------------------------
 # Custom Page Settings
