--- a/_config.hexo-theme-next_offical.yml
+++ b/_config.hexo-theme-next_offical.yml
@@ -632,7 +632,8 @@ utterances:
   enable: true
   repo: changyukang/changyukang.github.io # Github repository name
   # Available values: pathname | url | title | og:title
-  issue_term: pathname
+  # issue_term: pathname
+  issue_term: title
   # Available values: github-light | github-dark | preferred-color-scheme | github-dark-orange | icy-dark | dark-blue | photon-dark | boxy-light
   theme: github-light
 
