--- a/_config.hexo-theme-next_offical.yml
+++ b/_config.hexo-theme-next_offical.yml
@@ -85,7 +85,7 @@ menu:
   tags: /tags/ || fa fa-tags
   categories: /categories/ || fa fa-th
   archives: /archives/ || fa fa-archive
-  #schedule: /schedule/ || fa fa-calendar
+  schedule: /schedule/ || fa fa-calendar
   #sitemap: /sitemap.xml || fa fa-sitemap
   #commonweal: /404/ || fa fa-heartbeat
 
@@ -331,10 +331,10 @@ tagcloud:
 # Google Calendar
 # Share your recent schedule to others via calendar page.
 calendar:
-  calendar_id: <required> # Your Google account E-Mail
-  api_key: <required>
+  calendar_id: theo.cy.kang@gmail.com # Your Google account E-Mail
+  api_key: AIzaSyA85C5LYJ0-PDIKJ5cfW9dM_s9lWGjYz_8
   orderBy: startTime
-  showLocation: false
+  showLocation: true
   offsetMax: 72 # Time Range
   offsetMin: 4 # Time Range
   showDeleted: false
