--- a/_config.yml
+++ b/_config.yml
@@ -143,3 +143,12 @@ plugins: hexo-generate-feed
 # type: atom
 # path: atom.xml
 # limit: 20
+
+# hexo-symbols-count-time
+symbols_count_time:
+    symbols: true
+    time: true
+    total_symbols: true
+    total_time: true
+    awl: 5
+    wpm: 200
