do not show reading time in each text

--- a/_config.yml
+++ b/_config.yml
@@ -147,8 +147,8 @@ plugins: hexo-generate-feed
 # hexo-symbols-count-time
 symbols_count_time:
     symbols: true
-    time: true
+    time: false
     total_symbols: true
     total_time: true
-    awl: 5
-    wpm: 200
+    awl: 2
+    wpm: 100
