--- a/_config.hexo-theme-next_offical.yml
+++ b/_config.hexo-theme-next_offical.yml
@@ -462,14 +462,14 @@ font:
 
 # The calendar does not show in the sidebar
 # https://github.com/theme-next/theme-next-calendar
-CloudCalendar:
-  enable: true
-  language: zh-CN
-  single: true
-  root: /calendar/
-  calendarCdn: cdn.jsdelivr.net/gh/theme-next/theme-next-calendar/calendar.min.js
-  langCdn: cdn.jsdelivr.net/gh/theme-next/theme-next-calendar/languages.min.js
-  #disableSidebar: false
+# CloudCalendar:
+#   enable: true
+#   language: zh-CN
+#   single: true
+#   root: /calendar/
+#   calendarCdn: cdn.jsdelivr.net/gh/theme-next/theme-next-calendar/calendar.min.js
+#   langCdn: cdn.jsdelivr.net/gh/theme-next/theme-next-calendar/languages.min.js
+#   #disableSidebar: false
 
 # ---------------------------------------------------------------
 # SEO Settings
